# contamcheck

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
contamcheck/: benchmark.py  config.py
src/: benchmark.py  model.py  perturbations.py  scoring.py
tests/: conftest.py  test_benchmark.py
